; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/pf/extr_pf_norm.c_pf_frent_index.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/pf/extr_pf_norm.c_pf_frent_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pf_frent = type { i32 }

@PF_FRAG_ENTRY_POINTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pf_frent*)* @pf_frent_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pf_frent_index(%struct.pf_frent* %0) #0 {
  %2 = alloca %struct.pf_frent*, align 8
  store %struct.pf_frent* %0, %struct.pf_frent** %2, align 8
  %3 = load i32, i32* @PF_FRAG_ENTRY_POINTS, align 4
  %4 = sdiv i32 65536, %3
  %5 = sdiv i32 65528, %4
  %6 = icmp eq i32 %5, 15
  %7 = zext i1 %6 to i32
  %8 = call i32 @CTASSERT(i32 %7)
  %9 = load i32, i32* @PF_FRAG_ENTRY_POINTS, align 4
  %10 = sdiv i32 8191, %9
  %11 = icmp eq i32 %10, 511
  %12 = zext i1 %11 to i32
  %13 = call i32 @CTASSERT(i32 %12)
  %14 = load %struct.pf_frent*, %struct.pf_frent** %2, align 8
  %15 = getelementptr inbounds %struct.pf_frent, %struct.pf_frent* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @PF_FRAG_ENTRY_POINTS, align 4
  %18 = sdiv i32 65536, %17
  %19 = sdiv i32 %16, %18
  ret i32 %19
}

declare dso_local i32 @CTASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
